# Santalucia_Alessio_FoglioDiCalcolo

./: CMakeLists.txt  Controller.cpp  Controller.h  Counter.h  Model.cpp  Model.h  Observer.h  Subject.h  View.cpp  View.h  ViewWindow.h  main.cpp
test/: CMakeLists.txt  ControllerTest.cpp  MVCAlternativeTest.cpp  MVCTest.cpp  ModelTest.cpp  ObserverTest.cpp  ObserverTestV2.cpp
